build/00012/GPIOhunt_nodemcuv2.log
Processing nodemcuv2 (platform: espressif8266@4.2.0; board: nodemcuv2; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing platformio/tool-esptoolpy @ ~1.30000.0
Unpacking 0% 10% 20% 30% 40% 50% 60% 70% 80% 90% 100%
Tool Manager: tool-esptoolpy@1.30000.201119 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif8266/nodemcuv2.html
PLATFORM: Espressif 8266 (4.2.0) > NodeMCU 1.0 (ESP-12E Module)
HARDWARE: ESP8266 80MHz, 80KB RAM, 4MB Flash
PACKAGES: 
 - framework-arduinoespressif8266 @ 3.30102.0 (3.1.2) 
 - tool-esptool @ 1.413.0 (4.13) 
 - tool-esptoolpy @ 1.30000.201119 (3.0.0) 
 - toolchain-xtensa @ 2.100300.220621 (10.3.0)
Converting GPIOhunt.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 45 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.2a5b3e7
|-- ESPAsyncUDP @ 0.0.0-alpha+sha.697c75a025
|-- LittleFS @ 0.1.0
|-- ESP8266WiFi @ 1.0
|-- ESP8266mDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- ESP8266httpUpdate @ 1.3
|-- ESP8266HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/nodemcuv2/src/GPIOhunt.ino.cpp.o
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncHTTP.h:16,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:9,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/GPIOhunt.ino:4:
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/GPIOhunt.ino: In function 'void h4pGlobalEventHandler(const string&, H4PE_TYPE, const string&)':
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Service.h:416:38: error: 'onGPIO' was not declared in this scope
  416 | #define H4PEVENTCALL(e,s,m) H4PGLUE2(on,e)(s,m)
      |                                      ^~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Service.h:411:23: note: in definition of macro 'H4PGLUE2'
  411 | #define H4PGLUE2(x,y) x##y
      |                       ^
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Service.h:458:5: note: in expansion of macro 'H4PEVENTCALL'
  458 |     H4PEVENTCALL(e,STOI(svc),STOI(msg)); \
      |     ^~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Service.h:469:35: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_II'
  469 | #define H4P_FUNCTION_ADAPTER_GPIO H4P_FUNCTION_ADAPTER_II(GPIO)
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/GPIOhunt.ino:32:5: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_GPIO'
   32 |     H4P_FUNCTION_ADAPTER_GPIO;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
*** [.pio/build/nodemcuv2/src/GPIOhunt.ino.cpp.o] Error 1
========================== [FAILED] Took 4.50 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
nodemcuv2      FAILED    00:00:04.496
==================== 1 failed, 0 succeeded in 00:00:04.496 ====================